@@ -1,3 +1,10 @@
+2007-03-13  Akim Demaille  <akim.demaille@free.fr>
+
+	m4_after
+	We have several bad dependencu issues, let's track them down.
+	* m4-after.m4: New.
+	* urbi-package-kind.m4: Use it.
+
 2007-03-13  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
 
 	Add required CPPFLAGS for Windows in the urbi-with-openssl macro.
